# Stardew-audio-mod-generator

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
scripts/: build-cachyos.sh  build-linux.sh  build-windows.ps1  generate-icons.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  export.rs  lib.rs  main.rs  mod.rs  project.rs  watcher.rs
src/components/: AudioConverter.tsx  AudioForm.tsx  AudioList.tsx  AudioPlayer.tsx  AudioTab.tsx  ExportTab.tsx  HelpTab.tsx  LoadingOverlay.tsx  ScanTab.tsx  SetupTab.tsx  StardewDecorations.tsx  TabButton.tsx  Toast.tsx  animations.tsx
src/contexts/: LanguageContext.tsx  ThemeContext.tsx
src/data/: originalAudios.ts
src/hooks/: useWebFallback.ts
src/state/: AppContext.tsx  reducer.ts
src/types/: audio.ts
src/utils/: zipWeb.ts
