[package]
name = "stardew-audio-mod-generator"
version = "3.0.0"
description = "Native desktop app to create audio mods for Stardew Valley 1.6+"
authors = ["Kazinhols"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
chrono = "0.4"
walkdir = "2"
notify = "7"
