[package]
name = "stardew-audio-mod"
version = "3.0.0"
description = "Stardew Valley Audio Mod Generator"
authors = ["Kazinhols"]
edition = "2021"
license = "MIT"

[lib]
name = "stardew_audio_mod_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ogg = "0.9"
walkdir = "2"
notify = "6"
zip = { version = "2", features = ["deflate"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
